@@ -112,6 +112,7 @@
             <groupId>org.cryptotrader</groupId>
             <artifactId>crypto-trader-testing</artifactId>
             <version>0.0.3</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
@@ -162,7 +163,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
-                    <argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+                    <argLine>@{argLine} -Dfile.encoding=UTF-8 -XX:+EnableDynamicAgentLoading</argLine>
                 </configuration>
             </plugin>
             <plugin>
